--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@
 }
 
 body {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
   margin: 0;
   background-color: white;
   font-family: "Raleway", -apple-system, BlinkMacSystemFont, "Segoe UI",
