make category page responsive

--- a/src/pages/Category/Category.module.css
+++ b/src/pages/Category/Category.module.css
@@ -15,3 +15,15 @@
   grid-gap: 5.2vh 2.7vw;
   grid-template-columns: repeat(3, 1fr);
 }
+
+@media (max-width: 850px) {
+  .productListCont {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 550px) {
+  .productListCont {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
