--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Raleway");
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed");
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro");
+@import url("https://fonts.googleapis.com/css2?family=Roboto&family=Source+Sans+Pro");
 
 :root {
   --primary: #5ece7b;
