--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   margin: 0;
+  padding: 0;
   background-color: white;
   font-family: "Raleway", -apple-system, BlinkMacSystemFont, "Segoe UI",
     "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
