--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,24 +1,27 @@
 .headerContainer {
   box-sizing: border-box;
+  position: fixed;
+  background-color: white;
+  z-index: 5;
   top: 0;
   left: 0;
   width: 100vw;
-  padding: 1.8vh 7vw 0 7vw;
+  padding: 0 5.25rem 0.25rem 6.25rem;
   display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 
 .navList {
+  margin: 0;
+  padding: 0;
+  padding-top: 2rem;
   list-style: none;
   display: flex;
-  padding: 0;
-  align-items: center;
 }
 
 .navLink {
   text-decoration: none;
-  padding: 0.26vh 1.1vw 2.1vh 1vw;
+  padding: 0 1rem 1.75rem 1rem;
   font-weight: 400;
   font-size: 1rem;
   color: var(--secondary);
@@ -29,10 +32,66 @@
 }
 
 .actionsContainer {
+  padding: 1rem 0;
   display: flex;
   align-items: center;
 }
 
-.action:hover {
+.showCurrAction {
   cursor: pointer;
+  font-weight: 500;
+  font-size: 1.125rem;
+  display: flex;
+  align-items: flex-start;
+}
+
+.currency {
+  margin-right: 0.6rem;
+  margin-top: -0.2rem;
+}
+
+.upArrow {
+  margin-bottom: -0.5rem;
+  margin-right: 1.8rem;
+}
+
+.downArrow {
+  margin-top: -0.5rem;
+  margin-right: 1.8rem;
+}
+
+.currListCont {
+  width: 7.125rem;
+  box-shadow: 0px 4px 35px 0px #a8acb030;
+}
+
+.currListCont div {
+  font-size: 1.125rem;
+  color: var(--secondary);
+  padding: 1.25rem;
+  padding-right: 2.5rem;
+  cursor: default;
+}
+
+.currListCont div:hover {
+  background-color: black;
+  color: white;
+}
+
+.cartAction {
+  position: relative;
+  cursor: pointer;
+  padding: 0.65rem;
+}
+
+.cartNotf {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 1.25rem;
+  height: 1.25rem;
+  border-radius: 0.7rem;
+  background-color: black;
+  color: white;
+  text-align: center;
 }
