--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -31,6 +31,13 @@
   color: var(--primary);
 }
 
+.logo {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .actionsContainer {
   padding: 1rem 0;
   display: flex;
