--- a/src/components/CartItem/CartItem.module.css
+++ b/src/components/CartItem/CartItem.module.css
@@ -5,6 +5,12 @@
   border-top: 1px solid#E5E5E5;
 }
 
+.prodDetailsCont {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .amountImgCont {
   display: flex;
 }
@@ -14,7 +20,6 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  margin-right: 0.75rem;
 }
 
 .amountCont p {
@@ -24,11 +29,20 @@
 
 .imgCont {
   position: relative;
-  width: 8.8rem;
-  height: 100%;
+  margin: auto;
+  width: 10rem;
+  margin-left: 1.5rem;
 }
 
-.imgCont img {
+.imgContSmall {
+  position: relative;
+  margin: auto;
+  width: 7rem;
+  height: 9rem;
+  margin-left: 0.25rem;
+}
+
+.selectedImg {
   width: 100%;
   height: 100%;
   object-fit: contain;
@@ -55,4 +69,32 @@
   font-weight: 600;
   color: white;
   cursor: pointer;
+}
+
+.priceCont {
+  margin: 1rem 0;
+}
+
+.plusMinusBox {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2.8rem;
+  height: 2.8rem;
+  border: 1px solid #000;
+  font-size: 2rem;
+  color: #292929;
+  cursor: default;
+}
+
+.smallBox {
+  width: 1.5rem;
+  height: 1.5rem;
+  font-size: 1rem;
+}
+
+.plusMinusBox:hover {
+  background-color: black;
+  color: white;
 }
