edit Category page to include 'All' category

--- a/src/components/ProductCardList/ProductCardList.module.css
+++ b/src/components/ProductCardList/ProductCardList.module.css
@@ -20,6 +20,12 @@
   text-decoration: none;
 }
 
+.link {
+  display: grid;
+  text-decoration: none;
+  cursor: default;
+}
+
 @media (max-width: 850px) {
   .listCont {
     grid-template-columns: repeat(2, 1fr);
