--- a/src/components/ProductGallery/ProductGallery.module.css
+++ b/src/components/ProductGallery/ProductGallery.module.css
@@ -3,20 +3,21 @@
   flex: 1;
   margin-right: 2rem;
   margin-bottom: 3rem;
+  max-height: 70vh;
 }
 
 .sideImgContainer {
   display: flex;
   flex-direction: column;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
+  justify-content: space-between;
   width: 15%;
   margin-right: 2%;
 }
 
 .sideImgContainer img {
-  max-width: 100%;
-  min-height: 50px;
-  aspect-ratio: 1;
+  width: 5rem;
+  height: 5rem;
   margin-bottom: 10px;
   object-fit: contain;
 }
@@ -26,7 +27,9 @@
 }
 
 .imgPrevContainer {
-  width: 83%;
+  flex: 1;
+  max-height: 70vh;
+  margin-bottom: 10px;
   text-align: center;
 }
 
