--- a/src/components/SelectProdAtrributes/SelectProdAttributes.module.css
+++ b/src/components/SelectProdAtrributes/SelectProdAttributes.module.css
@@ -33,3 +33,31 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+.addToCartBtn {
+  width: 100%;
+  height: 3.25rem;
+  background-color: var(--primary);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-weight: 700;
+  margin: 2rem 0;
+  transition: all 500ms;
+}
+
+.addToCartBtn:hover {
+  cursor: pointer;
+  background-color: #499e5f;
+}
+
+.disable {
+  pointer-events: none;
+  background-color: rgba(166, 166, 166, 0.2);
+  color: rgba(166, 166, 166, 1);
+}
+
+.priceCont {
+  margin-top: 2rem;
+}
