--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -1,7 +1,7 @@
 .container {
   box-sizing: border-box;
-  width: 100%;
-  aspect-ratio: 0.86;
+  height: 15.5rem;
+  width: 15rem;
   min-width: 200px;
   padding: 1rem;
 }
@@ -43,7 +43,7 @@
   font-weight: 300;
   font-size: 1.125rem;
   color: var(--secondary);
-  margin-top: 27px;
+  margin-top: 1rem;
   margin-bottom: 0;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -52,19 +52,19 @@
 
 .price {
   font-weight: bold;
-  font-size: 1.125rem;
+  font-size: 1rem;
   color: var(--secondary);
-  margin-top: 4px;
+  margin-top: 3px;
   margin-bottom: 0;
 }
 
 .cartIcon {
   position: absolute;
   right: 8%;
-  margin-top: 0;
+  margin-top: -0.5rem;
   transform: translateY(-50%);
-  width: 45px;
-  height: 45px;
+  width: 2rem;
+  height: 2rem;
   border-radius: 50%;
   background-color: var(--primary);
   display: flex;
