--- a/src/components/ProductCardList/ProductCardList.module.css
+++ b/src/components/ProductCardList/ProductCardList.module.css
@@ -1,19 +1,20 @@
 .container {
-  padding: 6rem 5rem 8rem 5.5rem;
+  padding: 5rem 5rem 8rem 5.5rem;
 }
 
 .title {
   font-style: normal;
-  font-size: 2.6rem;
+  font-size: 2rem;
   color: var(--secondary);
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   margin-top: 0;
 }
 
 .listCont {
   display: grid;
-  grid-gap: 5.2vh 2.7vw;
-  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 2vh 3vw;
+  grid-template-columns: repeat(3, 15rem);
+  justify-content: space-between;
 }
 
 .productLink {
